--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50">
+    <!-- Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
@@ -14,7 +15,7 @@
                 <li><a href="about.html" class="font-bold text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
-                <li><a href="https://tally.so/r/w7Jqdz" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w4l51A" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
@@ -22,8 +23,9 @@
     <main class="container mx-auto px-6 py-16">
         <div class="bg-white p-10 rounded-lg shadow-xl">
             <div class="grid md:grid-cols-3 gap-10 items-center">
+                <!-- 프로필 사진을 images/profile.jpg 로 교체해주세요 -->
                 <div class="md:col-span-1">
-                    <img src="https://placehold.co/400x500/E2E8F0/4A5568?text=세연쌤+프로필" alt="조세연 선생님 프로필 사진" class="rounded-lg w-full">
+                    <img src="images/profile.jpg" alt="조세연 선생님 프로필 사진" class="rounded-lg w-full">
                 </div>
                 <div class="md:col-span-2">
                     <h1 class="text-4xl font-extrabold text-gray-900 leading-tight">"공부는 억지로 하는 게 아니라,<br>취미처럼 즐길 수 있는 것입니다."</h1>
@@ -71,5 +73,20 @@
             </div>
         </div>
     </main>
+
+    <footer class="text-center py-10 bg-gray-100 mt-12">
+        <div class="mb-4">
+            <h4 class="font-semibold text-gray-700">SehyunT Blogs</h4>
+            <div class="flex justify-center space-x-4 mt-2 text-sm text-gray-600">
+                <a href="https://blog.naver.com/ahrahsehyun" target="_blank" class="hover:underline">자기주도학습/입시</a>
+                <span>|</span>
+                <a href="https://sehyunt-logic.tistory.com/" target="_blank" class="hover:underline">시사/토론</a>
+                <span>|</span>
+                <a href="https://sehyunt-study.tistory.com/" target="_blank" class="hover:underline">면접 문제</a>
+            </div>
+        </div>
+        <p class="text-sm text-gray-500">© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
+    </footer>
 </body>
 </html>
+
