--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="bg-gray-50">
 
+    <!-- Header & Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
@@ -16,21 +17,29 @@
                 <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
                 <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
                 <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
-                <li><a href="https://tally.so/r/w7Jqdz" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+                <li><a href="https://tally.so/r/w4l51A" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <!-- Hero Section -->
         <section class="hero text-center py-20 bg-white">
             <h1 class="text-5xl font-extrabold text-gray-900">결과로 증명하는 입시 전략</h1>
             <h2 class="text-xl text-gray-600 mt-4 max-w-2xl mx-auto">세연쌤과 함께라면 막막한 입시는 가장 강력한 무기가 됩니다.</h2>
-            <a href="https://tally.so/r/w7Jqdz" target="_blank" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
+            <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
         </section>
 
-        <div class="slider-container my-12">
+        <!-- 이미지 슬라이더 (images 폴더에 slide1.jpg 등이 있어야 합니다) -->
+        <div class="slider-container my-12" style="max-width: 1200px; margin: 3rem auto; overflow: hidden; position: relative; border-radius: 8px;">
+            <div class="slider" id="slider" style="display: flex; transition: transform 0.5s ease-in-out;">
+                <div class="slide" style="min-width: 100%; height: 500px;"><img src="images/slide1.jpg" alt="합격 사례 1" style="width:100%; height:100%; object-fit:cover;"></div>
+                <div class="slide" style="min-width: 100%; height: 500px;"><img src="images/slide2.jpg" alt="합격 사례 2" style="width:100%; height:100%; object-fit:cover;"></div>
+                <div class="slide" style="min-width: 100%; height: 500px;"><img src="images/slide3.jpg" alt="합격 사례 3" style="width:100%; height:100%; object-fit:cover;"></div>
             </div>
+        </div>
 
+        <!-- Services Section -->
         <section id="services" class="py-16">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-2">세연쌤 컨설팅 프로그램</h2>
@@ -55,6 +64,7 @@
             </div>
         </section>
 
+        <!-- Testimonials Section -->
         <section id="testimonials" class="py-16 bg-white">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-12">성공 사례가 증명합니다</h2>
@@ -78,20 +88,56 @@
             </div>
         </section>
 
+        <!-- Blog Links Section (새로 추가) -->
+        <section id="blogs" class="py-16">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold mb-12">더 깊이 있는 정보, 세연쌤 블로그</h2>
+                <div class="grid md:grid-cols-3 gap-8 text-left">
+                    <div class="bg-white p-8 rounded-lg shadow-md flex flex-col">
+                        <h3 class="text-xl font-bold mb-2">자기주도학습 & 입시</h3>
+                        <p class="text-gray-600 mb-4 flex-grow">학생과 학부모를 위한 입시 칼럼과 자기주도학습 노하우를 공유합니다.</p>
+                        <a href="https://blog.naver.com/ahrahsehyun" target="_blank" class="mt-4 inline-block bg-green-600 text-white text-center font-semibold px-6 py-2 rounded-lg hover:bg-green-700 transition">네이버 블로그 &rarr;</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-md flex flex-col">
+                        <h3 class="text-xl font-bold mb-2">시사 이슈 & 토론</h3>
+                        <p class="text-gray-600 mb-4 flex-grow">생기부와 면접을 풍부하게 만들어 줄 최신 시사 이슈와 토론 논제를 다룹니다.</p>
+                        <a href="https://sehyunt-logic.tistory.com/" target="_blank" class="mt-4 inline-block bg-gray-800 text-white text-center font-semibold px-6 py-2 rounded-lg hover:bg-gray-900 transition">티스토리 블로그 &rarr;</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-md flex flex-col">
+                        <h3 class="text-xl font-bold mb-2">면접 연습 문제</h3>
+                        <p class="text-gray-600 mb-4 flex-grow">실전처럼 연습할 수 있는 다양한 학과, 전공별 면접 기출 및 예상 문제입니다.</p>
+                        <a href="https://sehyunt-study.tistory.com/" target="_blank" class="mt-4 inline-block bg-gray-800 text-white text-center font-semibold px-6 py-2 rounded-lg hover:bg-gray-900 transition">티스토리 블로그 &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
         <section id="contact" class="py-20 bg-gray-800 text-white text-center">
              <div class="container mx-auto px-6">
                 <h2 class="text-4xl font-bold">변화는 지금 시작됩니다</h2>
                 <p class="text-lg text-gray-300 mt-4">망설이는 순간, 경쟁자는 이미 앞서가고 있습니다.<br>세연쌤과의 1:1 상담으로 합격의 문을 여세요.</p>
-                <a href="https://tally.so/r/w7Jqdz" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
+                <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">
                     1:1 맞춤 상담 신청하기
                 </a>
              </div>
         </section>
     </main>
 
-    <footer class="text-center py-6 bg-gray-100">
-        <p>© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
+    <footer class="text-center py-10 bg-gray-100">
+        <div class="mb-4">
+            <h4 class="font-semibold text-gray-700">SehyunT Blogs</h4>
+            <div class="flex justify-center space-x-4 mt-2 text-sm text-gray-600">
+                <a href="https://blog.naver.com/ahrahsehyun" target="_blank" class="hover:underline">자기주도학습/입시</a>
+                <span>|</span>
+                <a href="https://sehyunt-logic.tistory.com/" target="_blank" class="hover:underline">시사/토론</a>
+                <span>|</span>
+                <a href="https://sehyunt-study.tistory.com/" target="_blank" class="hover:underline">면접 문제</a>
+            </div>
+        </div>
+        <p class="text-sm text-gray-500">© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
+
