--- a/index.html
+++ b/index.html
@@ -4,48 +4,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SehyunT | 학생의 성장을 함께하는 입시 컨설팅</title>
-    <!-- Tailwind CSS (기존과 동일) -->
+    <!-- 1. Tailwind CSS CDN (가장 먼저 로드) -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- 여기에 새로운 style.css 링크를 추가합니다. -->
+    <!-- 2. 우리가 만든 커스텀 스타일 (나중에 로드해서 덮어쓰기) -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-50">
 
-    <!-- Header & Navigation (기존과 동일) -->
+    <!-- Header & Navigation -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
-        <!-- ... (내비게이션 바 내용은 그대로) ... -->
+        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold text-gray-800">SehyunT</a>
+            <ul class="flex items-center space-x-6">
+                <li><a href="about.html" class="text-gray-600 hover:text-blue-600">선생님 소개</a></li>
+                <li><a href="consulting.html" class="text-gray-600 hover:text-blue-600">컨설팅 프로그램</a></li>
+                <li><a href="store.html" class="text-gray-600 hover:text-blue-600">자료/강의</a></li>
+                <li><a href="https://tally.so/r/w4l51A" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">1:1 상담 신청</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <!-- Hero Section (기존과 동일) -->
-        <section class="hero text-center py-20 bg-white">
-            <!-- ... (히어로 섹션 내용은 그대로) ... -->
+        <!-- Hero Section -->
+        <section class="text-center py-20 bg-white">
+            <h1 class="text-5xl font-extrabold text-gray-900">결과로 증명하는 입시 전략</h1>
+            <h2 class="text-xl text-gray-600 mt-4 max-w-2xl mx-auto">세연쌤과 함께라면 막막한 입시는 가장 강력한 무기가 됩니다.</h2>
+            <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-blue-600 text-white text-lg font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition">지금 바로 상담 신청하기</a>
         </section>
 
         <!-- 업그레이드된 이미지 슬라이더 -->
         <div class="slider-viewport my-16">
             <div class="slider-container" id="slider-container">
+                <!-- 이미지는 images 폴더 안에 있어야 합니다 -->
                 <div class="slide"><img src="images/slide1.jpg" alt="합격 사례 1"></div>
                 <div class="slide"><img src="images/slide2.jpg" alt="합격 사례 2"></div>
                 <div class="slide"><img src="images/slide3.jpg" alt="합격 사례 3"></div>
-                <!-- 슬라이드를 더 추가하고 싶으면 이 아래에 추가하세요 -->
             </div>
             <button class="slider-btn prev" onclick="moveSlide(-1)">&#10094;</button>
             <button class="slider-btn next" onclick="moveSlide(1)">&#10095;</button>
         </div>
+        
+        <!-- Services Section -->
+        <section id="services" class="py-16">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold mb-2">세연쌤 컨설팅 프로그램</h2>
+                <p class="text-gray-600 mb-12">학생의 현재 위치와 목표에 최적화된 로드맵을 제시합니다.</p>
+                <div class="grid md:grid-cols-3 gap-8">
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">초등 자기주도학습</h3>
+                        <p class="text-gray-600 mb-4">공부의 '즐거움'을 깨우치는 학부모 코칭</p>
+                        <a href="consulting.html#elementary" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">중등 입시/학습</h3>
+                        <p class="text-gray-600 mb-4">특목·자사고부터 대입까지 내다보는 전략 수립</p>
+                        <a href="consulting.html#middle" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">고등 입시 전략</h3>
+                        <p class="text-gray-600 mb-4">수시·정시를 아우르는 최종 합격 컨설팅</p>
+                        <a href="consulting.html#high" class="text-blue-600 font-semibold hover:underline">자세히 보기 &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <!-- 나머지 섹션들은 기존과 동일합니다 -->
-        <section id="services">...</section>
-        <section id="testimonials">...</section>
-        <section id="blogs">...</section>
-        <section id="contact">...</section>
+        <!-- Testimonials Section -->
+        <section id="testimonials" class="py-16 bg-white">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold mb-12">성공 사례가 증명합니다</h2>
+                <div class="grid md:grid-cols-3 gap-8 text-left">
+                    <div class="p-6 border rounded-lg bg-gray-50">
+                        <h4 class="font-bold text-blue-600 mb-2">생기부 컨설팅 사례</h4>
+                        <p class="text-gray-700">"수행평가 주제부터 보고서 개요까지 선생님이 옆에서 잡아주시니까 아이가 금세 스스로 글을 써 내려갔어요. 생활기록부가 점점 채워지면서 아이가 달라졌습니다."</p>
+                        <p class="mt-4 font-semibold text-right">- 합격생 학부모</p>
+                    </div>
+                    <div class="p-6 border rounded-lg bg-gray-50">
+                        <h4 class="font-bold text-blue-600 mb-2">내신 관리 사례</h4>
+                        <p class="text-gray-700">"내신 성적이 3점대 후반이라 학종은 어렵다고 생각했는데, 과목별 전략과 활동 정리를 함께 하면서 아이가 자신감을 되찾았습니다."</p>
+                        <p class="mt-4 font-semibold text-right">- 합격생 학부모</p>
+                    </div>
+                    <div class="p-6 border rounded-lg bg-gray-50">
+                        <h4 class="font-bold text-blue-600 mb-2">면접 준비 사례</h4>
+                        <p class="text-gray-700">"아이 말투와 논리 구조까지 꼼꼼히 잡아주셔서 실제 면접장에서 침착하게 답할 수 있었습니다."</p>
+                        <p class="mt-4 font-semibold text-right">- 합격생 학부모</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Blog Section -->
+        <section id="blogs" class="py-16">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold mb-12">세연쌤의 블로그 & 자료실</h2>
+                <div class="grid md:grid-cols-3 gap-8 text-left">
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">자기주도학습·입시 블로그</h3>
+                        <p class="text-gray-600 mb-4">최신 입시 정보와 학습법 칼럼을 만나보세요.</p>
+                        <a href="https://blog.naver.com/ahrahsehyun" target="_blank" class="text-blue-600 font-semibold hover:underline">바로가기 &rarr;</a>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">시사 이슈·토론 블로그</h3>
+                        <p class="text-gray-600 mb-4">생기부와 면접을 위한 깊이 있는 시사 탐구 자료.</p>
+                        <a href="https://sehyunt-logic.tistory.com/" target="_blank" class="text-blue-600 font-semibold hover:underline">바로가기 &rarr;</a>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">면접 연습 문제 블로그</h3>
+                        <p class="text-gray-600 mb-4">실전처럼 연습할 수 있는 면접 기출 및 예상 문제.</p>
+                        <a href="https://sehyunt-study.tistory.com/" target="_blank" class="text-blue-600 font-semibold hover:underline">바로가기 &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="py-20 bg-gray-800 text-white text-center">
+            <div class="container mx-auto px-6">
+                <h2 class="text-4xl font-bold">변화는 지금 시작됩니다</h2>
+                <p class="text-lg text-gray-300 mt-4">망설이는 순간, 경쟁자는 이미 앞서가고 있습니다.<br>세연쌤과의 1:1 상담으로 합격의 문을 여세요.</p>
+                <a href="https://tally.so/r/w4l51A" target="_blank" class="mt-8 inline-block bg-white text-blue-600 text-xl font-bold px-10 py-4 rounded-lg hover:bg-gray-200 transition">1:1 맞춤 상담 신청하기</a>
+            </div>
+        </section>
     </main>
 
+    <!-- Footer -->
     <footer class="text-center py-10 bg-gray-100">
-        <!-- ... (푸터 내용은 그대로) ... -->
+        <p class="text-gray-700">© 2025 SehyunT 조세연 | 문의: ahrah0365@gmail.com</p>
+        <div class="mt-4 flex justify-center space-x-6">
+            <a href="https://blog.naver.com/ahrahsehyun" target="_blank" class="text-gray-500 hover:text-blue-600">학습·입시 블로그</a>
+            <a href="https://sehyunt-logic.tistory.com/" target="_blank" class="text-gray-500 hover:text-blue-600">시사·토론 블로그</a>
+            <a href="https://sehyunt-study.tistory.com/" target="_blank" class="text-gray-500 hover:text-blue-600">면접 문제 블로그</a>
+        </div>
     </footer>
 
-    <!-- script.js 파일은 맨 마지막에 위치해야 합니다. -->
+    <!-- JavaScript 파일은 항상 body 태그 닫기 직전에 위치 -->
     <script src="script.js"></script>
 </body>
 </html>
